--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ on:
     paths-ignore:
       - "documents/**"
       - "**.md"
-  workflow-dispatch:
+  workflow_dispatch:
 
 jobs:
   # ---------------------------------------------------------------------------
