Revert "Remove freebsd CI"
This reverts commit 983ccc00d2379c1787a440c82ede59cb53c26477.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,3 +54,17 @@ jobs:
         run: xmake b
       - name: Test
         run: xmake run uwvm --version
+  # ---------------------------------------------------------------------------
+  freebsd:
+    name: FreeBSD
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: vmactions/freebsd-vm@v1
+        with:
+          prepare: |
+            pkg install -y llvm20 xmake-io
+          run: |
+            xmake f --use-llvm=y -m debug
+            xmake b
+            xmake run uwvm --version
