--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -62,9 +62,10 @@ jobs:
       - uses: actions/checkout@v4
       - uses: vmactions/freebsd-vm@v1
         with:
-          prepare: |
-            pkg install -y llvm20 xmake-io
-          run: |
-            xmake f --use-llvm=y -m debug
-            xmake b
-            xmake run uwvm --version
+          prepare: pkg install -y llvm20 xmake-io
+      - name: Configure
+        shell: freebsd {0}
+        run: |
+          xmake f -p mingw --use-llvm=y -m debug
+          xmake b
+          xmake run uwvm --version
