--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -65,7 +65,9 @@ jobs:
       - uses: actions/checkout@v4
       - uses: vmactions/freebsd-vm@v1
         with:
-          prepare: pkg install -y llvm20 xmake-io
+          prepare: |
+            pkg install -y llvm20 xmake-io
+            export XMAKE_ROOT=y
       - name: Configure
         run: xmake f -m debug
       - name: Build
